New Modification for test and adding entity class for Recruitment services